puse un div y en ese div puse otros div para los cuadros y tambien puse la funcionalidad del juego

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/el-juego-del-gato-y-raton/css/style.css">
 </head>
 <body>
-    hola
+
+    <div class="conteinerDeGato">
+        <div onclick="cuadro1()" id="cuadro1" class="cuadro4"></div>
+        <div onclick="cuadro2()" id="cuadro2" class="cuadro5"></div>
+        <div onclick="cuadro3()" id="cuadro3" class="cuadro4"></div>
+        <div onclick="cuadro4()" id="cuadro4" class="cuadro4"></div>
+        <div onclick="cuadro5()" id="cuadro5" class="cuadro5"></div>
+        <div onclick="cuadro6()" id="cuadro6" class="cuadro4"></div>
+        <div onclick="cuadro7()" id="cuadro7" class="cuadro"></div>
+        <div onclick="cuadro8()" id="cuadro8" class="cuadro8"></div>
+        <div onclick="cuadro9()" id="cuadro9" class="cuadro"></div>
+    </div>
+    <script src="js/lu.js"></script>
 </body>
 </html>
