hice unas ajustaciones al js y leagregue unas cosas y tambie le agregue al html y css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/el-juego-del-gato-y-raton/css/style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
 
@@ -19,7 +20,9 @@
         <div onclick=cuadro8() id="cuadro8" class="cuadro8"></div>
         <div onclick=cuadro9() id="cuadro9" class="cuadro"></div>
 
-        <!-- <div id="mensaje">us</div> -->
+        <div id="mensaje">TU TURNO</div>
+        <br>
+        
     </div>
     <script src="js/lu.js"></script>
 </body>
